[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/icons8-money-bag-94.png" type="Texture" id=1]
[ext_resource path="res://SongSectionOption.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.188235 )

[node name="SongSectionOption" type="Button"]
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 60 )
flat = true
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxC" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 118.0
margin_bottom = 20.0

[node name="Control" type="Control" parent="HBoxC"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )

[node name="Label" type="Label" parent="HBoxC"]
margin_left = 34.0
margin_top = 13.0
margin_right = 434.0
margin_bottom = 27.0
rect_min_size = Vector2( 400, 0 )
text = "Part 01"
clip_text = true

[node name="ProgressLevelC" type="Node2D" parent="."]

[node name="Level1" type="Sprite" parent="ProgressLevelC"]
position = Vector2( 360, 28 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Level2" type="Sprite" parent="ProgressLevelC"]
self_modulate = Color( 0, 0, 0, 0.509804 )
position = Vector2( 390, 28 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Level3" type="Sprite" parent="ProgressLevelC"]
self_modulate = Color( 0, 0, 0, 0.509804 )
position = Vector2( 420, 28 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[connection signal="pressed" from="." to="." method="_on_SongSectionOption_pressed"]
